samples/_failures_safe/1761157532_5a8a45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10971d68.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_10971d68.c:153:9: error: expected declaration or statement at end of input
  153 |         case TOKEN_STRING: printf("STRING"); break;
      |         ^~~~
./samples/SAFE/__tmp_10971d68.c:153:9: error: expected declaration or statement at end of input
